Adição de controller exemplo

--- a/projeto-api.csproj
+++ b/projeto-api.csproj
@@ -6,4 +6,11 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.7" />
+  </ItemGroup>
 </Project>
