--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,15 @@ jobs:
   build:
     runs-on: ubuntu-16.04
     steps:
+      - name: Print directory
+        run: |
+          ls
       - uses: actions/checkout@v1
       - name: Build and deploy the Docker image
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           APP_NAME: ${{ 'lp4-projeto-api' }}
         run: |
-          ls
           cd ./trabalho-lp4el/projeto-api
           docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
           heroku container:push web -a $APP_NAME
